# opensm

./: .gitignore  README.md  install.sh  pyproject.toml
opensm/: CLAUDE.md  __init__.py  analysis.py  batch.py  builders.py  constants.py  engines.py  manager.py  parsers.py  project.py  spectrum.py  templates.py  utils.py  wigner.py
opensm/templates/: namd_default.json  namd_qmmm_default.json  qmmm_default.json  qp_default.json
